--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Practica1</string>
     <string name="male">Male</string>
     <string name="female">Female</string>
+    <string name="height">Height</string>
+    <string name="age">Age</string>
+    <string name="weight">Weight</string>
+    <string name="calculate">calculate</string>
 </resources>
