--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="age">Age</string>
     <string name="weight">Weight</string>
     <string name="calculate">calculate</string>
+    <string name="your_bmi">Tu IMC</string>
 </resources>
