--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -5,6 +5,16 @@
     <string name="height">Height</string>
     <string name="age">Age</string>
     <string name="weight">Weight</string>
-    <string name="calculate">calculate</string>
+    <string name="calculate">Calculate</string>
+    <string name="reCalculate">Re-calculate</string>
     <string name="your_bmi">Tu IMC</string>
+
+    <string name="error">Error</string>
+
+    <string name="title_underweight">Underweight</string>
+    <string name="title_normal">Normal</string>
+    <string name="title_overweight">Overweight</string>
+    <string name="title_obesity">Obesity</string>
+    <string name="description">At vero eos et accusam et justo duo dolores et ea rebum</string>
+
 </resources>
