--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="business">Business</string>
     <string name="personal">Personal</string>
     <string name="other">Other</string>
+    <string name="add_task">Add task</string>
 
 </resources>
