--- a/Practica1/app/src/main/res/values/strings.xml
+++ b/Practica1/app/src/main/res/values/strings.xml
@@ -24,5 +24,11 @@
     <string name="personal">Personal</string>
     <string name="other">Other</string>
     <string name="add_task">Add task</string>
+    <string name="intelligence">Intelligence</string>
+    <string name="strength">Strength</string>
+    <string name="speed">Speed</string>
+    <string name="durability">Durability</string>
+    <string name="power">Power</string>
+    <string name="combat">Combat</string>
 
 </resources>
